// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Batch9 — provenance integrity & scope safety > 13110: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または国外から目黒区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13110-resident_registration-001",
        "src-13110-facilities-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。転入届の手続きの際にマイナンバーカードをお持ちください。",
      "applicable": "applicable",
      "dueDescription": "手続きできる期間は転入届出日から90日以内です。90日を経過した場合、カードの有効期限が満了している場合、前々住所地から前住所地へ転入時に継続利用の手続きを行わないまま目黒区へ転入した場合などは継続利用ができず、マイナンバーカードは失効します。なお目黒区のページには、他区にある『転出予定日から30日を経過した転入届』『転入日から14日(または15日)を経過した転入届』による失効条件の記載がありません。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13110-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "目黒区に住所のある74歳までの方で、職場の健康保険などに加入している方や生活保護を受けている方を除いて、すべての方が国民健康保険への加入が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13110-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金の被保険者の方に、転入に伴う手続きの要否をお知らせします。目黒区の国民年金の届出ページには転入したときの届出に関する記載がないため、届出の要否は窓口でご確認ください。",
      "applicable": "applicable",
      "dueDescription": "目黒区の「国民年金の届出」ページには、転入したときの国民年金の届出および日数固定の期限についての記載がありません(記載されているのは、会社などを退職したとき、第3号被保険者の方が配偶者の扶養から外れたとき、会社などに就職したとき、厚生年金に加入している配偶者の扶養になったときの届出先です)。窓口は区役所・各地区サービス事務所・目黒年金事務所で、マイナポータルによる電子申請もできます。届出の要否は国保年金課国民年金係にご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13110-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "18歳到達後最初の3月31日までの、国内に居住する児童を養育している方が対象です。目黒区に転入した場合は請求手続きが必要です(所得制限はありません)。",
      "applicable": "applicable",
      "dueDescription": "請求の事由発生日の翌日から数えて15日以内に請求してください。目黒区は「事由発生日とは、出生の場合は出生日、転入の場合は前住地の転出予定日です」と明記しています。15日以内に請求すれば事由発生日の翌月分から受給が始まり、15日を経過した場合は請求受付日の翌月分からの開始となります。起算日は前住所地での転出予定日のため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13110-child_benefits-001",
        "src-13110-child_benefits-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "乳幼児医療証・子ども医療証・高校生等医療証の交付を受けるには申請が必要です。出生、転入のときは忘れずに申請してください。",
      "applicable": "applicable",
      "dueDescription": "異動日(出生又は転入)から3か月以内に申請してください。3か月を経過したあとに申請した場合、出生日・転入日まで遡って助成することができなくなります。申請はオンライン申請、来庁申請(目黒区総合庁舎2階 子ども若者課児童手当・医療証係、各地区サービス事務所)、郵送申請から選べます。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13110-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が目黒区へ転入する場合に必要な、区立学校への転入学手続きです。目黒区で交付される書類の名称は「入学指定通知書」です。",
      "applicable": "applicable",
      "dueDescription": "前籍校で「在学証明書」と「教科用図書給与証明書」を受け取り、転校先となる目黒区の通学区域校へ事前に連絡して面談日を調整してください。目黒区の戸籍住民課または各地区サービス事務所で住民票の転入手続きを行うと、その窓口で通学区域校を指定した「入学指定通知書」が交付されます。面談日にはお子さんと一緒に来校し、在学証明書・教科用図書給与証明書・入学指定通知書を持参してください。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13110-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、目黒区の認可保育施設の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "毎月8日頃が翌月1日入所の申込みの締切です(2月と3月の入所はありません)。受付は祝日を除く月曜日から金曜日の8時30分から17時まで、保育課保育施設利用係窓口・郵送・オンラインで受け付けています。目黒区へ転入予定でその旨の証明書類を用意できる方は目黒区の保育課に直接申し込めます。転入予定の証明ができない方は、お住まいの区市町村の保育担当課で申し込みます。締切日は入所希望月により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13110-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬を飼っている方が目黒区へ転入した場合、区の受付窓口での登録事項変更の届出が必要です。目黒区は令和4年6月1日時点において「狂犬病予防法の特例制度」に参加しないため、マイクロチップを環境省の指定登録機関に登録済みであっても、狂犬病予防法における犬の登録などの手続きは従来どおり区の窓口で行う必要があります。",
      "applicable": "applicable",
      "dueDate": "2026-08-31",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13110-dog_registration-001",
        "src-13110-dog_registration-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたって資源・ごみの分け方と収集日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集日を確認してください)。目黒区公式サイトの「資源とごみの収集日・分別検索」で地域名と番地から収集日を検索できます。地域別の資源・ごみ収集日カレンダー(2026年4月から2027年3月まで)と収集曜日一覧表も公開されています。燃やさないごみの「月2回」は毎月該当する最初の曜日が第1となり、第5曜日の収集はありません。古紙の回収曜日は町会や自治会などによって異なります。本サービスは目黒区の収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13110-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch9 — provenance integrity & scope safety > 13113: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または国外から渋谷区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13113-resident_registration-001",
        "src-13113-facilities-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、他区市町村から渋谷区に転入する際に継続利用の手続きが必要です。転入後の住所をマイナンバーカードに追加するもので、転入届とあわせて行います。",
      "applicable": "applicable",
      "dueDescription": "継続利用の条件は、(1)転出予定日から30日以内であること、(2)既に渋谷区へ転入済みであり、転入届を出した日から90日以内であること、(3)有効期間内のマイナンバーカードであること、(4)サインパネル(青い部分)が満欄でないこと、の4つです。条件外の場合は継続利用の手続きができず、マイナンバーカードは失効します。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13113-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、渋谷区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13113-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金の被保険者の方に、転入に伴う手続きの要否をお知らせします。渋谷区の受付窓口早見表には国内の他区市町村からの転入に関する記載がないため、届出の要否は窓口でご確認ください。",
      "applicable": "applicable",
      "dueDescription": "渋谷区の「国民年金の手続き・届出(受付窓口早見表)」では、国民年金の加入(資格取得・種別変更)の事由として「会社などをやめたとき、会社員などの配偶者の扶養から外れたとき、国外から転入したとき」が挙げられています。国内の他区市町村から転入したときの届出および日数固定の期限についての記載はありません。窓口は電子申請(マイナポータル)、区役所3階 国民年金係、出張所・区民サービスセンター、渋谷年金事務所です。届出の要否は国民年金係にご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13113-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生年代(18歳になった最初の3月31日まで)までの日本国内に住民登録のある児童を養育し、生計を担っている父または母で、渋谷区に住民登録がある方が対象です。転入前の住所地で児童手当を受給していた場合も、新たに渋谷区での手続きが必要です。",
      "applicable": "applicable",
      "dueDescription": "出生・前住所の転出予定日の翌日から15日以内に申請してください。この期間内に認定請求した場合は、転入や出生の属する月の翌月分から支給を開始します。申請が遅れると遅れた分の手当を受給できない場合があります。申請場所は区役所4階子ども政策課子育て給付係、郵送、オンライン申請です。起算日は前住所地での転出予定日のため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13113-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "区内に住所を有する0歳から18歳に達する日以後の最初の3月31日までの間にあるお子さんを養育している方(保護者)が対象です。保護者(申請者)の所得制限はありません。",
      "applicable": "applicable",
      "dueDescription": "出生・転入から14日以内に申請すると、出生・転入の日から助成が受けられます。それ以降の申請は、申請書を受け付けた日から助成します。郵送または窓口で申請書類を提出するか、オンラインでも申請できます。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13113-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が渋谷区へ転入する場合に必要な、区立学校への転入学手続きです。渋谷区で交付される書類の名称は「就学通知書」です。",
      "applicable": "applicable",
      "dueDescription": "転入・転居手続きの際に、就学通知書をお渡しします。前の学校の在学証明書などとともに、指定の学校に提出して入学してください。渋谷区立小中学校へ入学せずに国立・私立学校に引き続き就学する方や新たに入学する方は、就学通知書と当該学校の在学証明書または入学承諾書を学務課学事係に提出してください。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13113-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、渋谷区の認可保育園等の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "渋谷区に転入予定がある方は、渋谷区保育課入園相談係の窓口で、渋谷区の各入所希望月の締め切り日までに申し込みます(申し込み書一式、転入手続きに関する同意書、入所希望日の前月末日までに渋谷区に転入することが確認できる書類が必要です)。転入予定がない方は、申し込み日現在お住まいの自治体の保育担当窓口へ、渋谷区の各入所希望月の締め切り日の2週間から10日前までに申し込みます(4月一次募集は申し込みできません)。締め切り日は入所希望月・募集回により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13113-childcare-001",
        "src-13113-childcare-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・登録状況が未確認のため、届出先(渋谷区生活衛生課事業係 または 「犬と猫のマイクロチップ情報登録」サイト)が確定できません。装着・登録状況をご確認ください(装着済みなら区の窓口での申請は必要ありません)。",
      "applicable": "needs_confirmation",
      "dueDescription": "区外からの転入は、前住所地の鑑札を持参して転入の手続きをしてください。前住所地の鑑札が無い場合は「鑑札の再交付」扱いとなり、前住所地での登録を確認します(確認ができない場合は新規登録)。受付窓口は生活衛生課事業係(区役所本庁舎7階)のみで、出張所・区民サービスセンターでは登録手続きは行えません。マイクロチップを装着している犬は「犬と猫のマイクロチップ情報登録」が受付窓口となり、区の窓口での申請は必要ありません。日数の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13113-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集日を確認してください)。ごみ・資源は収集日の8時までに指定の場所に出してください(一部の繁華街地域は収集日の7時30分まで)。渋谷区公式サイトの「ごみ収集日」ページに町名・丁目ごとの可燃ごみ(週2回)・不燃ごみ(月1回)・資源(週1回)の収集曜日一覧表と、地域別収集日(曜日)一覧表のPDFが掲載されています。年末年始は収集を休んだり変更することがあります。本サービスは渋谷区の収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13113-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch9 — provenance integrity & scope safety > 13122: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または国外から葛飾区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13122-resident_registration-001",
        "src-13122-facilities-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。手続きできるのは本人または法定代理人および同世帯員だけで、カードの暗証番号の入力が必要です。",
      "applicable": "applicable",
      "dueDescription": "転入手続きをした日から90日を過ぎると手続きできません。また、実際に引っ越した日から14日以内に新住所地での転入届出を行わなかった場合や、転出予定日から30日以内に転入届出を行わなかった場合には、その個人番号カードは失効し継続利用手続きはできなくなります。受付場所は区役所2階戸籍住民課または区民事務所です。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13122-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、葛飾区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13122-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金の被保険者の方に、転入に伴う手続きの要否をお知らせします。葛飾区の届出案内表には国内の他区市町村からの転入に関する記載がないため、届出の要否は窓口でご確認ください。",
      "applicable": "applicable",
      "dueDescription": "葛飾区の「国民年金加入や喪失手続き」の届出案内表には、「海外から帰国(転入)したとき」に第1号被保険者として加入する手続きが必要と記載されています(海外在住期間から引き続き厚生年金に加入している方とその扶養配偶者、転入日と同月内に厚生年金に加入する方とその扶養配偶者は手続き不要)。国内の他区市町村から転入したときの届出および日数固定の期限についての記載はありません。届出場所は国保年金課国民年金係(区役所3階)または区民事務所です。届出の要否は国民年金係にご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13122-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "葛飾区にお住まいで、高校生年代(18歳に達した日以後の最初の3月31日)までのお子さんを養育している方が対象です(所得制限はありません)。",
      "applicable": "applicable",
      "dueDescription": "出生日・葛飾区への転入日(前住所地の転出予定日)の月末までに申請してください。出生日・葛飾区への転入日(転出予定日)が月の後半の場合、その翌日から15日以内に申請をすれば、出生日・葛飾区への転入日(転出予定日)の翌月分から手当が支給されます(15日特例)。申請が遅れた場合、さかのぼっての支給はできません。葛飾区は転入日を「前住所地の転出予定日」と併記しているため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13122-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "区内にお住まいで、健康保険に加入している、高校3年生相当年齢(18歳に達した日以後の最初の3月31日)までの児童を養育している方が対象です。",
      "applicable": "applicable",
      "dueDescription": "医療証の資格取得日は、出生の方は出生日、転入の方は転入日です。ただし、対象者となった日から3か月以内に申請をしなかった場合は、申請日が資格取得日となります。申請は区役所等の窓口のほか、郵送や葛飾区公式ホームページからのオンライン申請もできます。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13122-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が葛飾区へ転入する場合に必要な、区立学校への転校手続きです。葛飾区で交付される書類の固有名称は公式ページに記載がないため設定していません(他区の名称を持ち込みません)。",
      "applicable": "applicable",
      "dueDescription": "在学している学校で転退学の手続きをし、最終登校日に「在学証明書」と「教科用図書給与証明書」等の書類を受け取ってください。その書類を持って区民事務所または区役所戸籍住民課で転入の手続きを行い、窓口で書類を提示すると、転入先の学校に入学するための書類が発行されます。窓口で発行された書類と学校から受け取った書類を転校先の学校へ提出してください。住所変更の手続きの際に「在学証明書」と「教科書給与証明書」をお持ちでない場合は手続きできません。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13122-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、葛飾区の保育施設の利用を希望する方向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "0歳から就学前までのお子さんで、家庭で保育できない事情がある場合に申し込みできます。申し込みについての詳細は「令和8年度 保育施設利用案内」(PDF)に記載されており、利用案内は保育課(区役所4階401番)、区民事務所・区民サービスコーナー、公立・私立保育所などで配布しています。オンライン申請(保育園等入所オンライン申請)も利用できます。区外からの申込み・転入予定者向けの日数固定の期限は、このページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13122-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省データベースへの登録状況が未確認のため、届出先(葛飾区保健所生活衛生課・区民事務所 または 犬と猫のマイクロチップ情報登録サイト)が確定できません。登録状況をご確認ください(登録済みなら登録サイトでの届出のみで、窓口での手続きは不要です)。",
      "applicable": "needs_confirmation",
      "dueDescription": "環境省データベースに登録されていない犬の場合は、前自治体での鑑札を持参し、保健所生活衛生課か区民事務所で転入の届出をしてください。前自治体の鑑札は葛飾区の鑑札と無料で交換します(紛失した場合は鑑札の再交付となり1,600円の手数料がかかり、再交付は平日8時30分から17時までの受付です)。環境省データベースに登録されている犬の場合は、「犬と猫のマイクロチップ情報登録」の「登録事項の確認・変更」画面で届出でき、窓口での手続きは不要です。区外から転入したときの住所変更の届出について、日数の期限はこのページには記載がありません(『犬を飼い始めてから30日以内(生後90日以内の犬は生後120日以内)』は、新たに犬を飼い始めたときの登録の期限です)。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13122-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたって資源・ごみの分け方と収集日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地区の収集日を確認してください)。葛飾区公式サイトの「資源とごみの収集カレンダー」ページに、2026年4月から2027年3月までの地区別カレンダー(添付ファイル)と、地区ごとの1年間の収集曜日がわかる簡易版カレンダーが掲載されています。本サービスは葛飾区の収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13122-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;
